# ChangeLog for app-shells/fish
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-shells/fish/ChangeLog,v 1.33 2007/06/25 02:16:03 dberkholz Exp $

  25 Jun 2007; Donnie Berkholz <dberkholz@gentoo.org>; fish-1.22.3.ebuild:
  (#172586) Remove unused doc USE flag (James Rowe).

*fish-1.22.3 (21 Jun 2007)

  21 Jun 2007; Donnie Berkholz <dberkholz@gentoo.org>; +fish-1.22.3.ebuild:
  (#167281) Bump to latest. The doxygen dep is mandatory.

  04 Feb 2007; Steve Dibb <beandog@gentoo.org> fish-1.22.1.ebuild:
  amd64 stable, bug 151899

  24 Jan 2007; Marius Mauch <genone@gentoo.org> fish-1.21.8.ebuild,
  fish-1.21.12.ebuild, fish-1.22.1.ebuild, fish-1.22.2.ebuild:
  Replacing einfo with elog

  20 Jan 2007; nixnut <nixnut@gentoo.org> fish-1.22.2.ebuild:
  Stable on ppc wrt bug 151899

  18 Jan 2007; Christian Faulhammer <opfer@gentoo.org> fish-1.22.1.ebuild:
  stable x86, bug #151899

*fish-1.22.2 (18 Jan 2007)

  18 Jan 2007; Donnie Berkholz <dberkholz@gentoo.org>; +fish-1.22.2.ebuild:
  (#161476) Bump. (#151900) Install to /bin so it's usable as a default shell
  when /usr is unavailable. Still needs an entry in /etc/shells, though. Use
  emake for install instead of make, so MAKEOPTS gets passed through. Seems to
  work fine in parallel.

  02 Dec 2006; Alec Warner <antarus@gentoo.org> fish-1.21.8.ebuild,
  fish-1.21.12.ebuild, fish-1.22.1.ebuild:
  fix homepage for bug 156857

*fish-1.22.1 (13 Nov 2006)

  13 Nov 2006; Donnie Berkholz <dberkholz@gentoo.org>; +fish-1.22.1.ebuild:
  Bump.

*fish-1.21.12 (24 Sep 2006)

  24 Sep 2006; Donnie Berkholz <dberkholz@gentoo.org>; +fish-1.21.12.ebuild:
  (#146789) Bump.

  20 Aug 2006; Donnie Berkholz <dberkholz@gentoo.org>; fish-1.21.8.ebuild:
  Stable on x86/ppc.

  20 Aug 2006; Donnie Berkholz <dberkholz@gentoo.org>; -fish-1.18.2.ebuild,
  -fish-1.19.0.ebuild, -fish-1.20.2.ebuild:
  Pull old ebuilds.
