@@ -1,6 +1,8 @@
 AUX fish-1.22.3-gettext.patch 296 RMD160 06515465c69c4da0d791cac05cd0fd350cf7a848 SHA1 eb95eb7b30cacdb8d40489a531d6fd8416e55d28 SHA256 b68fe25bae61fa76ce140f5cae43e9b882ea05cf6f9d2d9d8fecd37e3a69c037
 AUX fish-1.22.3-iconv.patch 731 RMD160 1b82d578cc9ad070cf16ddcfc2dac35e8c909c93 SHA1 ac600b10c870d0e72d5d78d5b4c74262e2d64ec9 SHA256 18cbdb29eadde1b8bde1d415ec325bccd46cfbfe49585de70abd0eb39e967068
 DIST fish-1.22.3.tar.bz2 788097 RMD160 0ce93c597662688280af8ccb1cb9f203704be978 SHA1 4b7d705b8d7736253713021e1791c0dd5dcbc80b SHA256 7291f2183de3d2b7d2451750ccc435757c186f50d3c1ae7a5ea68c05b591dfd1
-EBUILD fish-1.22.3.ebuild 1596 RMD160 4131845e4d9e74b33c22fe1d4d8bb44d92eefb49 SHA1 20bb1c598e2fece5c4fb7cb50172562f4614aa8a SHA256 7a3d7eb4482460fc3540a15c904082ddacf41cc4af45d7c797ba0326e1e1fd2d
-MISC ChangeLog 6634 RMD160 8ba51cea544d219bfecf8a58d0bb6b6ba7dc8058 SHA1 aafda33ddccf6579bbcf198317df83cb84166064 SHA256 b11d63ccad99209e3a12aa16eaba5bd6ad3515783bbf6ee22f933351e183060d
+DIST fish-1.23.0.tar.bz2 823193 RMD160 0c68e10552e843e8aec920175433ed252da2f040 SHA1 8f2c4ca6b760dde5d4c4f8d745c97ce9e283879f SHA256 ddd86de46d6736cb387ff8ab1aeffa679a93a5ebdab0ba679e3f7c2cac77d871
+EBUILD fish-1.22.3.ebuild 1608 RMD160 a0c4c4e1c7226776655c092f1bb7fcd1bbc2d38b SHA1 b66d04accc9b655fec0bc167ca9a8785d646571b SHA256 2b3e25b28bb1d8c30342e4c3ca4c650742992e40a113dd735ea5344656a3a7ff
+EBUILD fish-1.23.0.ebuild 1459 RMD160 1638c1d1aa65c04eed19ccfdfec5647283ba720b SHA1 a360cfd28adeba17d43dad04e4678b6d10e9fbfa SHA256 8bea1bb0b7b575fa55517f16826718052d151b7ffa4b16e92b8ec54b9204dfd7
+MISC ChangeLog 6876 RMD160 bba2542d809ce95397a78ea5e5eb91e0199303ab SHA1 8a97fa1d5b8873208610e53fb0b12668b6e49435 SHA256 964b669dc67dcdc09d8a42762ec413ba9ad9c26d87a849974228685fd19dc385
 MISC metadata.xml 225 RMD160 7d34ec0d318713a7c56169cd33b6e37c466ea28c SHA1 60ce86a1f6f02dce594e21d3c794bcbe7758a7c2 SHA256 347ac757bb9b39010be57bc7d7ebcb29aa458f6b5071815bfea9d2c097a8d524
