@@ -1,6 +1,12 @@
 # ChangeLog for app-shells/fish
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-shells/fish/ChangeLog,v 1.33 2007/06/25 02:16:03 dberkholz Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-shells/fish/ChangeLog,v 1.34 2008/01/13 09:45:07 dberkholz Exp $
+
+*fish-1.23.0 (13 Jan 2008)
+
+  13 Jan 2008; Donnie Berkholz <dberkholz@gentoo.org>; +fish-1.23.0.ebuild:
+  Bump. Changes: case-insensitive tab completions; enhancements to the
+  multiline editing system; new, more powerful keybinding system.
 
   25 Jun 2007; Donnie Berkholz <dberkholz@gentoo.org>; fish-1.22.3.ebuild:
   (#172586) Remove unused doc USE flag (James Rowe).
